--- a/AutoScalingMultiAZWithNotifications.template
+++ b/AutoScalingMultiAZWithNotifications.template
@@ -526,13 +526,13 @@
     "CPUAlarmHigh": {
      "Type": "AWS::CloudWatch::Alarm",
      "Properties": {
-        "AlarmDescription": "Scale-up if CPU > 10% for 10 minutes",
+        "AlarmDescription": "Scale-up if CPU > 50% for 1 minute",
         "MetricName": "CPUUtilization",
         "Namespace": "AWS/EC2",
         "Statistic": "Average",
         "Period": "60",
         "EvaluationPeriods": "1",
-        "Threshold": "10",
+        "Threshold": "50",
         "AlarmActions": [ { "Ref": "WebServerScaleUpPolicy" } ],
         "Dimensions": [
           {
@@ -546,13 +546,13 @@
     "CPUAlarmLow": {
      "Type": "AWS::CloudWatch::Alarm",
      "Properties": {
-        "AlarmDescription": "Scale-down if CPU < 5% for 10 minutes",
+        "AlarmDescription": "Scale-down if CPU < 50% for 1 minute",
         "MetricName": "CPUUtilization",
         "Namespace": "AWS/EC2",
         "Statistic": "Average",
         "Period": "60",
         "EvaluationPeriods": "1",
-        "Threshold": "5",
+        "Threshold": "50",
         "AlarmActions": [ { "Ref": "WebServerScaleDownPolicy" } ],
         "Dimensions": [
           {
