--- a/AutoScalingMultiAZWithNotifications.template
+++ b/AutoScalingMultiAZWithNotifications.template
@@ -440,90 +440,117 @@
     },
 
     "LaunchTemplate" : {
-      "Type" : "AWS::EC2::LaunchTemplate",
-      "Metadata" : {
-        "Comment" : "Install a simple application",
-        "AWS::CloudFormation::Init" : {
-          "config" : {
-            "packages" : {
-              "yum" : {
-                "httpd" : []
-              }
-            },
-            "files" : {
-              "/var/www/html/index.html" : {
-                "content" : { "Fn::Join" : ["\n", [
-                  "<h1>Congratulations, you have successfully launched the AWS CloudFormation stack with auto-scaling solution.</h1>",
-                  "<body>Gentle reminder to detele the stack after your experimentation is complete.</body>"
-                ]]},
-                "mode"    : "000644",
-                "owner"   : "root",
-                "group"   : "root"
-              },
-              "/etc/cfn/cfn-hup.conf" : {
-                "content" : { "Fn::Join" : ["", [
-                  "[main]\n",
-                  "stack=", { "Ref" : "AWS::StackId" }, "\n",
-                  "region=", { "Ref" : "AWS::Region" }, "\n"
-                ]]},
-                "mode"    : "000400",
-                "owner"   : "root",
-                "group"   : "root"
-              },
-
-              "/etc/cfn/hooks.d/cfn-auto-reloader.conf" : {
-                "content": { "Fn::Join" : ["", [
-                  "[cfn-auto-reloader-hook]\n",
-                  "triggers=post.update\n",
-                  "path=Resources.LaunchTemplate.Metadata.AWS::CloudFormation::Init\n",
-                  "action=/opt/aws/bin/cfn-init -v ",
-                  "         --stack ", { "Ref" : "AWS::StackName" },
-                  "         --resource LaunchTemplate ",
-                  "         --region ", { "Ref" : "AWS::Region" }, "\n",
-                  "runas=root\n"
-                ]]}, "mode"    : "000400", "owner"   : "root",
-                "group"   : "root"
-              }
-            },
-
-            "services" : {
-              "sysvinit" : {
-                "httpd"    : { "enabled" : "true", "ensureRunning" : "true" },
-                "cfn-hup" : { "enabled" : "true", "ensureRunning" : "true",
-                              "files" : ["/etc/cfn/cfn-hup.conf", "/etc/cfn/hooks.d/cfn-auto-reloader.conf"]}
-              }
-            }
+  "Type" : "AWS::EC2::LaunchTemplate",
+  "Metadata" : {
+    "Comment" : "Install a simple application",
+    "AWS::CloudFormation::Init" : {
+      "config" : {
+        "packages" : {
+          "yum" : {
+            "httpd" : []
           }
-        }
-      },
-      "Properties" : {
-        "LaunchTemplateData": {
-          "InstanceType": "t2.micro",
-          "KeyName" : { "Ref" : "KeyName" },
-          "SecurityGroupIds": [
-            { "Ref": "InstanceSecurityGroup" }
-          ],
-          "ImageId" : { "Fn::FindInMap" : [ "AWSRegionArch2AMI", { "Ref" : "AWS::Region" },
-                                          { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "InstanceType" }, "Arch" ] } ] },
-
-          "UserData"       : { "Fn::Base64" : { "Fn::Join" : ["", [
-              "#!/bin/bash -xe\n",
-              "yum update -y aws-cfn-bootstrap\n",
-
-              "yum update -y aws-cli\n",
-
-              "/opt/aws/bin/cfn-init -v ",
+        },
+        "files" : {
+          "/var/www/html/index.html" : {
+            "content" : { "Fn::Join" : ["\n", [
+              "<h1>Congratulations, you have successfully launched the AWS CloudFormation stack with auto-scaling solution.</h1>",
+              "<body>",
+              "Gentle reminder to delete the stack after your experimentation is complete.",
+              "</body>"
+            ]]},
+            "mode"    : "000644",
+            "owner"   : "root",
+            "group"   : "root"
+          },
+          "/etc/cfn/cfn-hup.conf" : {
+            "content" : { "Fn::Join" : ["", [
+              "[main]\n",
+              "stack=", { "Ref" : "AWS::StackId" }, "\n",
+              "region=", { "Ref" : "AWS::Region" }, "\n"
+            ]]},
+            "mode"    : "000400",
+            "owner"   : "root",
+            "group"   : "root"
+          },
+          "/etc/cfn/hooks.d/cfn-auto-reloader.conf" : {
+            "content": { "Fn::Join" : ["", [
+              "[cfn-auto-reloader-hook]\n",
+              "triggers=post.update\n",
+              "path=Resources.LaunchTemplate.Metadata.AWS::CloudFormation::Init\n",
+              "action=/opt/aws/bin/cfn-init -v ",
               "         --stack ", { "Ref" : "AWS::StackName" },
               "         --resource LaunchTemplate ",
               "         --region ", { "Ref" : "AWS::Region" }, "\n",
+              "runas=root\n"
+            ]]}, "mode"    : "000400", "owner"   : "root",
+            "group"   : "root"
+          }
+        },
+        "commands" : {
+          "01_install_httpd" : {
+            "command" : "yum install -y httpd",
+            "cwd" : "/"
+          },
+          "02_enable_httpd" : {
+            "command" : "systemctl enable httpd && systemctl start httpd",
+            "cwd" : "/"
+          },
+          "03_add_private_ip" : {
+            "command" : {
+              "Fn::Join": [
+                "",
+                [
+                  "echo '<p>Private IP: ' >> /var/www/html/index.html && ",
+                  "curl -s http://169.254.169.254/latest/meta-data/local-ipv4 >> /var/www/html/index.html && ",
+                  "echo '</p>' >> /var/www/html/index.html"
+                ]
+              ]
+            },
+            "cwd" : "/"
+          }
+        },
+        "services" : {
+          "sysvinit" : {
+            "httpd" : {
+              "enabled" : "true",
+              "ensureRunning" : "true"
+            },
+            "cfn-hup" : {
+              "enabled" : "true",
+              "ensureRunning" : "true",
+              "files" : ["/etc/cfn/cfn-hup.conf", "/etc/cfn/hooks.d/cfn-auto-reloader.conf"]
+            }
+          }
+        }
+      }
+    }
+  },
+  "Properties" : {
+    "LaunchTemplateData": {
+      "InstanceType": "t2.micro",
+      "KeyName" : { "Ref" : "KeyName" },
+      "SecurityGroupIds": [
+        { "Ref": "InstanceSecurityGroup" }
+      ],
+      "ImageId" : { "Fn::FindInMap" : [ "AWSRegionArch2AMI", { "Ref" : "AWS::Region" },
+                                      { "Fn::FindInMap" : [ "AWSInstanceType2Arch", { "Ref" : "InstanceType" }, "Arch" ] } ] },
+      "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
+        "#!/bin/bash -xe\n",
+        "yum update -y aws-cfn-bootstrap\n",
+        "yum update -y aws-cli\n",
+        "/opt/aws/bin/cfn-init -v ",
+        "         --stack ", { "Ref" : "AWS::StackName" },
+        "         --resource LaunchTemplate ",
+        "         --region ", { "Ref" : "AWS::Region" }, "\n",
+        "/opt/aws/bin/cfn-signal -e $? ",
+        "         --stack ", { "Ref" : "AWS::StackName" },
+        "         --resource WebServerGroup ",
+        "         --region ", { "Ref" : "AWS::Region" }, "\n"
+      ]]}}
+    }
+  }
+},
 
-              "/opt/aws/bin/cfn-signal -e $? ",
-              "         --stack ", { "Ref" : "AWS::StackName" },
-              "         --resource WebServerGroup ",
-              "         --region ", { "Ref" : "AWS::Region" }, "\n"
-          ]]}}
-      }}
-    },
 
     "WebServerScaleUpPolicy" : {
       "Type" : "AWS::AutoScaling::ScalingPolicy",
